<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bookImg"
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtBName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/inf_book_name"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/txtBNameT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/txtBName"
                app:layout_constraintStart_toEndOf="@+id/txtBName"
                app:layout_constraintTop_toTopOf="@+id/txtBName" />

            <TextView
                android:id="@+id/txtBAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/inf_author"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBName" />

            <TextView
                android:id="@+id/txtBAuthorT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/txtBAuthor"
                app:layout_constraintStart_toEndOf="@+id/txtBAuthor"
                app:layout_constraintTop_toTopOf="@+id/txtBAuthor" />

            <TextView
                android:id="@+id/txtBPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/inf_pages"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBAuthor" />

            <TextView
                android:id="@+id/txtBPagesT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/inf_textview"
                app:layout_constraintBottom_toBottomOf="@+id/txtBPages"
                app:layout_constraintStart_toEndOf="@+id/txtBPages"
                app:layout_constraintTop_toTopOf="@+id/txtBPages" />

            <TextView
                android:id="@+id/txtBShortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/inf_description"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBPages" />

            <TextView
                android:id="@+id/txtBLongDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/inf_more_details"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBShortDescT" />

            <Button
                android:id="@+id/btnWantRead"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Want To Read"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnReading"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintStart_toStartOf="@+id/btnReading"
                app:layout_constraintTop_toBottomOf="@+id/btnReading" />

            <Button
                android:id="@+id/btnAlRead"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:text="Already read"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="@+id/btnWantRead"
                app:layout_constraintStart_toStartOf="@+id/btnWantRead"
                app:layout_constraintTop_toBottomOf="@+id/btnWantRead" />

            <Button
                android:id="@+id/btnReading"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="  Reading  "
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="177dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="254dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="53dp" />

            <TextView
                android:id="@+id/txtBShortDescT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBShortDesc" />

            <TextView
                android:id="@+id/txtBLongDescT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBLongDesc" />

            <TextView
                android:id="@+id/txtReleaseData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/inf_release_data"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/txtBLongDescT" />

            <TextView
                android:id="@+id/txtReleaseDataT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/txtReleaseData"
                app:layout_constraintStart_toEndOf="@+id/txtReleaseData"
                app:layout_constraintTop_toTopOf="@+id/txtReleaseData" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</RelativeLayout>